Twitter widget and responsiveness improvements -New nav on smaller screens -Removed sidebar on <1159px and fixed layout accordingly -As of now has now been moved onto WordPress -Fixed some layout conflicts with other browsers

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ body {
 
 h1, h2, h3, h4, h5 {
 	font-weight: normal;
+	margin-top:1em;
 }
 
 ul {
@@ -29,6 +30,11 @@ ul {
 p {
 	font-family: $helvetica;
 	color:#a1abaf;
+	display: block;
+	-webkit-margin-before: 1em;
+	-webkit-margin-after: 1em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
 }
 
 header.header {
@@ -56,6 +62,11 @@ header.header {
 
 		a{
 			color:#f0c343;
+			@include transition (all 0.4s);
+			&:hover{
+				color:white;
+				text-decoration: none;
+			}
 		}
 		.logo {
 			position: relative;
@@ -64,6 +75,9 @@ header.header {
 				box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 				border: 2px solid #D8BD3C;
 			}
+		}
+	ul.dropdownz {
+			display: none;
 		}
 	}
 	.leftNav{
@@ -104,6 +118,35 @@ header.header {
 		font-size:31px;
 
 	}
+// Breakpoint for header.header navigation at 1159px
+@media only screen and (max-width:1159px) {
+	position: relative;
+	width: 110%;
+	right: 5%;
+
+	.leftNav{
+		display: none;
+	}
+
+	.topNav {
+		li{
+			margin-top:.5em;
+		}
+		.logo {
+			width:100%;
+		}
+		ul.dropdownz {
+			display: block;
+		}
+	}
+	li {
+		padding:0 1%;
+		font-size:28px;
+	}
+	li.desktopmenu {
+		display:none;
+	}
+}
 }
 
 #main {
@@ -140,6 +183,11 @@ header.header {
 	width: 80.333%;
 	margin-left: 16%;
 	padding-left: 4%;
+	// Breakpoint for when left nav is gone
+	@media only screen and (max-width:1159px) {
+		width:100%;
+		margin-left: 0%;
+	}
 }
 
 #events h2, #feed h2 {
@@ -188,6 +236,7 @@ header.header {
 		display: block;
 		border-bottom: #dadedf 1px solid;
 		padding:10px 0px;
+		overflow: hidden;
 		.left{
 			display: inline-block;
 			width: 30%;
@@ -221,6 +270,14 @@ header.header {
 		}
 	}
 
+}
+
+.timeline {
+    background:none !important;
+    border:0 !important;
+}
+.summary .customisable-highlight {
+    visibility:hidden !important;
 }
 
 #blog {
@@ -287,7 +344,7 @@ header.header {
 			color:#909598;
 			font-size:17px;
 		}
-		blockquote {
+		blockquote p {
 			font-family: $lucida-grande;
 			font-size:16px;
 			border-left: 7px solid #38BEF1;
